--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=Damaarsi
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:KQM9hSuI8qxmWsoPi5QF4hpXAVFWCngRBNV5mFQNbGE=
 APP_DEBUG=true
-APP_URL=http://127.0.0.1:8000
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=damaarsi
 DB_USERNAME=root
 DB_PASSWORD=
 
